# transrate-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build  build_mac.sh  build_segmenter  build_split.sh  build_split_mac.sh  segmenter.cpp  transrate-bam-read.cpp  transrate-bam-split.cpp  transrate-bam-split.h  transrate-pileup.cpp  transrate-pileup.h  transrate_pileup.cpp  transrate_pileup.h
lib/: libbamtools.so.2.3.0
src/: CMakeLists.txt  Makefile  bam-read  bam-read.cpp  bam-read.h  bam-split  bam-split.cpp  pileup.cpp  pileup.h  segmenter.h  thread.cpp  thread.h
